tests/reference/asr-kind_invalid_int_of_logical-6bf4989.stderr
semantic error: Kind 10 is not supported for Logical
 --> tests/errors/kind_invalid_int_of_logical.f90:3:13
  |
3 |     logical(10) :: x
  |             ^^ 
